[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menus/BotonMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://estilos/BotonMenu.gd" type="Script" id=3]
[ext_resource path="res://recursos/Players/bunny2_hurt.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Kenney Rocket.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Menus/MenuGameOver.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.392157, 0.435294, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.0941176, 0.454902, 0.784314, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.780392, 0.0588235, 0.188235, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.054902, 0.054902, 0.054902, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 6 )

[node name="MenuGameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
niveles = "res://juego/Niveles/Level_One.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.0941176, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bunny2_hurt" type="Sprite" parent="."]
position = Vector2( 200.812, 177.665 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 647.269
margin_top = 85.2978
margin_right = 859.269
margin_bottom = 257.298
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continuar" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 212.0
margin_bottom = 54.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Continuar"

[node name="MenuPrincipal" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 58.0
margin_right = 212.0
margin_bottom = 113.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Menu Principal"

[node name="Salir" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 117.0
margin_right = 212.0
margin_bottom = 172.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Salir"
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 168.012
margin_top = 310.544
margin_right = 748.012
margin_bottom = 462.544
custom_fonts/font = SubResource( 4 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuPrincipal" to="." method="_on_MenuPrincipal_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="VBoxContainer/Salir" method="_on_Salir_pressed"]
